--- a/sass-queries.scss
+++ b/sass-queries.scss
@@ -14,8 +14,9 @@ $sq-breakpoints: (
 ) !default;
 $sq-media: "all" !default;
 $sq-debug: false !default;
+$sq-mobile-first: false !default;
 
-@mixin media($from: false, $until: false, $and: false, $media: $sq-media)
+@mixin media($from: false, $until: false, $and: false, $media: $sq-media, $mobile-first: $sq-mobile-first)
 {
     $min: 0;
     $max: 0;
@@ -30,13 +31,21 @@ $sq-debug: false !default;
     }
     @if $until {
         @if type-of($until) == number {
-            $max: $until;
+            $max: $until - 1;
         } @else {
-            $max: map-get($sq-breakpoints, $until);
+            $max: map-get($sq-breakpoints, $until) - 1;
         }
     }
-    @if $min != 0 { $query: "#{$query} and (min-width: #{$min})"; }
-    @if $max != 0 { $query: "#{$query} and (max-width: #{$max})"; }
+
+    $dir-min: "max";
+    $dir-max: "min";
+    @if $mobile-first {
+      $dir-min: "min";
+      $dir-max: "max";
+    }
+
+    @if $min != 0 { $query: "#{$query} and (#{$dir-min}-width: #{$min})"; }
+    @if $max != 0 { $query: "#{$query} and (#{$dir-max}-width: #{$max})"; }
     @if $and      { $query: "#{$query} and #{$and}"; }
 
     @if $query {
